-Avoid placing text directly in <div> tags; use semantic tags instead. -Wrap dates in the <time> tag. -For blog card headings, include a link. -Set the alt attribute of decorative images to be empty. Avoid redundant phrases, and keep descriptions concise. -Remove redundancies like height: auto, font-size: 16px, and overlapping selectors.

--- a/index.css
+++ b/index.css
@@ -3,12 +3,17 @@ html{
     --gray-950-color: #111111;
     --gray-500-color: #6B6B6B;
     --white-color: #FFFFFF;
-    font-size: 16px;;
+
+    --font-size-preset-1: 1.5rem;
+    --font-size-preset-2: 1rem;
+    --font-sizep-preset-3: 0.875rem;
+
+    --font-weight-extra-bold: 800;
+    --font-weight-medium: 500;
 }
 
 * {
     margin: 0;
-    box-sizing: border-box;
 }
 
 *, *::before, *::after{
@@ -27,18 +32,16 @@ body {
 
     font-size: 0.875rem;
     font-family: "Figtree", sans-serif;
-    font-weight: 500;
-    line-height: 150%;
+    font-weight: var(--font-weight-medium);
+    line-height: 1.5;
     letter-spacing: 0;
 }
 
 
 .card {
-    height: auto;
     background-color: var(--white-color);
     border-radius: 20px;
     max-width: 24rem;
-    height: auto;
     padding: 1.5rem 1.5rem;
     margin: 2rem 0;
     box-shadow: 8px 8px 0 #000000;
@@ -56,30 +59,32 @@ body {
 
 .category-tag {
     background-color: var(--yellow-color);
-    max-width: min-content;
-    height: auto;
+    max-width: fit-content;
     border-radius: 4px;
     padding: 0.25rem 0.875rem;
     margin-bottom: 0.75rem;
-    font-size: 0.875rem;
-    font-weight: 700;
-    line-height: 150%;
-
+    font-weight: var(--font-weight-extra-bold);
 }
 
 .publish-date{
+    color: var(--gray-950-color);
     margin-bottom: 0.75rem;
 }
 
 .title {
     margin-bottom: 0.75rem;
     color: var(--gray-950-color);
-    font-weight: 800;
+    font-weight: var(--font-weight-extra-bold);
     font-size: 1.5rem;
 }
 
+.title:hover{
+    color: var(--yellow-color);
+    cursor: pointer;
+}
+
 .description{
-    columns: var(--gray-500-color);
+    color: var(--gray-500-color);
     font-size: 1rem;
 }
 
@@ -94,10 +99,11 @@ body {
 }
 
 .author-name{
-    font-weight: 800;
+    font-weight: var(--font-weight-extra-bold);
     margin-left: 0.375rem;
 }
 
 footer{
-   margin-top: auto; 
+   margin-top: auto;
+   margin-bottom: 1rem; 
 }
